Fixed bug #29678 (opendir() with ftp:// wrapper segfaults if path does not have trailing slash).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@166454 c90b9560-bf6c-de11-be94-00142212c4b1